--- a/build.cuda.vc10/gnfs/gnfs.vcxproj
+++ b/build.cuda.vc10/gnfs/gnfs.vcxproj
@@ -172,11 +172,11 @@
     <ClCompile Include="..\..\gnfs\poly\stage1\stage1_sieve_gpu_sq.c" />
     <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_deg45_x.c" />
     <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_deg45_xy.c" />
-    <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_deg6.c" />
     <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_deg6_x.c" />
     <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_deg6_xy.c" />
     <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_deg6_xyz.c" />
     <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_line.c" />
+    <ClCompile Include="..\..\gnfs\poly\stage2\root_sieve_util.c" />
     <ClCompile Include="..\..\gnfs\relation.c" />
     <ClCompile Include="..\..\gnfs\filter\duplicate.c" />
     <ClCompile Include="..\..\gnfs\filter\filter.c" />
