update to latest MGPU source
git-svn-id: https://svn.code.sf.net/p/msieve/code/branches/msieve-lacuda@950 8c02911e-0617-4013-80d0-c3bcbcae04d5

--- a/mgpu/Makefile
+++ b/mgpu/Makefile
@@ -24,7 +24,8 @@ INC = -I"$(CUDA_ROOT)include" -Iinclude -I.
 
 SRC = \
       scan_engine.cu \
-	$(wildcard src/*.cpp)
+	$(wildcard src/*.cpp) \
+	$(wildcard src/*.cu)
 
 DEPS = ./Makefile $(SRC) \
 	scan_engine.h \
