switch to MGPU sparse matrix routines
git-svn-id: https://svn.code.sf.net/p/msieve/code/branches/msieve-lacuda@951 8c02911e-0617-4013-80d0-c3bcbcae04d5

--- a/mgpu/Makefile
+++ b/mgpu/Makefile
@@ -23,16 +23,16 @@ GEN_SM35 = -gencode=arch=compute_35,code=\"sm_35,compute_35\"
 INC = -I"$(CUDA_ROOT)include" -Iinclude -I. 
 
 SRC = \
-      scan_engine.cu \
+      spmv_engine.cu \
 	$(wildcard src/*.cpp) \
 	$(wildcard src/*.cu)
 
 DEPS = ./Makefile $(SRC) \
-	scan_engine.h \
+	spmv_engine.h \
 	$(wildcard include/*.h) \
 	$(wildcard include/*.cuh)
 
-LIBNAME = scan_engine
+LIBNAME = spmv_engine
 
 all: $(LIBNAME)_sm20.$(EXT) $(LIBNAME)_sm30.$(EXT) $(LIBNAME)_sm35.$(EXT)
 	touch built
